changes for PACT-1:   o removing all the unnecessary jvm parameters that do not apply to java 8   o fixing bug in confluence where the confluence-init.properties were not set   o setting back compression to highest level