@@ -13,7 +13,7 @@ cp ~/stash.init .
 sudo ln -s $PWD/stash.init /etc/init.d/stash
 
 cat >.stashrc <<EOL
-CATALINA_OPTS="$JVM_OPTS -Xms256m -Xmx256m -XX:MaxPermSize=68m -XX:ReservedCodeCacheSize=28m"
+CATALINA_OPTS="$JVM_OPTS -Xms256m -Xmx512m"
 export CATALINA_OPTS
 EOL
 
